# AI201-Project-4

./: .gitignore  AGENTS.md  README.md  app.py  audit_log.py  labels.py  llm_signal.py  planning.md  pyproject.toml  signals.py  submissions.py
fixtures/: fetch_human_samples.py  generate_ai_samples.py
fixtures/ai/: SOURCES.md  ai_01.txt  ai_02.txt  ai_03.txt  ai_04.txt  ai_05.txt  ai_06.txt  ai_07.txt  ai_08.txt  ai_09.txt  ai_10.txt  ai_11_gemini_user_provided.txt
fixtures/human/: SOURCES.md  human_01_austen.txt  human_02_doyle.txt  human_03_melville.txt  human_04_twain.txt  human_05_carroll.txt  human_06_wells.txt  human_07_emerson_formal.txt  human_08_federalist_formal.txt  human_09_thoreau.txt  human_10_shelley.txt
tests/: conftest.py  test_app.py  test_audit_log.py  test_labels.py  test_llm_signal.py  test_signals.py
tools/: calibrate.py  check_determinism.py  planning_diagrams.py  test.txt  test2.txt  try_production.py  try_signals.py
