[project]
name = "provenance-guard"
version = "0.1.0"
description = "AI201 Project 4 — Provenance Guard: heuristic AI/human text classifier with transparency labels and an appeals workflow."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-limiter>=3.5.0",
    "groq==0.15.0",
    "python-dotenv==1.0.1",
]

# matplotlib/numpy/seaborn: only needed by tools/planning_diagrams.py.
# pytest: only needed by tests/. Neither is imported by the running app.
[dependency-groups]
dev = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pytest>=9.1.1",
    "seaborn>=0.13",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
